# Yt-Downloader-web-app

./: README.md
yt_downlaoder/: .env  Cargo.toml  docker-compose.yml
yt_downlaoder/pytube_wrpr/: .env  Cargo.toml
yt_downlaoder/pytube_wrpr/src/: DlnFetch.py  lib.rs  main.rs
yt_downlaoder/yt_download_manager/: .env  Cargo.toml  Dockerfile
yt_downlaoder/yt_download_manager/src/: errors.rs  handlers.rs  lib.rs  main.rs
yt_downlaoder/yt_service/: .env  Cargo.toml  Dockerfile
yt_downlaoder/yt_service/src/: dbscript.rs  dbscript.sql  errors.rs  handlers.rs  lib.rs  main.rs  models.rs  ytscripts.rs
yt_downlaoder/yt_web/: .env  Cargo.toml  Dockerfile
yt_downlaoder/yt_web/src/: dbscript.sql  errors.rs  lib.rs  main.rs  models.rs
yt_downlaoder/yt_web/src/handlers/: general.rs  mod.rs  user.rs  videos.rs
yt_downlaoder/yt_web/src/routes/: general.rs  mod.rs  user.rs  videos.rs
yt_downlaoder/yt_web/static/: 404.html  delete.html  downloads.html  landing.html  login.html  new-user.html  update.html
yt_downlaoder/yt_web/static/css/: style.css  style.css.map  styles.scss
yt_downlaoder/yt_web/static/html/: 404.html  delete.html  downloads.html  landing.html  login.html  new-user.html  update.html
yt_downlaoder/yttest/: Cargo.toml
yt_downlaoder/yttest/src/: main.rs
